# libtorch_with_yolov8

./: README.md  pt转换成torchscripts的命令.txt
cuda/: test  test.cu  编译命令.txt
libtorch/: CMakeLists.txt  ObjectDetector.cc  ObjectDetector.h  run_model.cc  test.cc
